--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Node app</title>
 </head>
 <body>
-
+  <h1>You are now serving index.html, congrats</h1>
   <script type="text/javascript" src="/app.js">
 
   </script>
