--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 </head>
 <body>
   <h1>You are now serving index.html, congrats</h1>
+
+
+  <input id="text" type="text" />
+  <button id="hej">send!</button>
+
   <script type="text/javascript" src="/app.js">
 
   </script>
+
+
+
 </body>
 </html>
