--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-  <h1>You are now serving index.html, congrats</h1>
 
-
-  <input id="text" type="text" />
-  <button id="hej">send!</button>
+  <!--
+    TASK 1
+    Create a div with id app. This is where our react app will get mounted
+  -->
+  <div id="app">
+  </div>
 
   <script type="text/javascript" src="/app.js">
 
